--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,10 +37,11 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
-		<div id="filter-container">			
+		<div id="filter-container">
+						
 		</div>
 		<div class="gallery">
-			<figure>
+			<!-- <figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
 				<figcaption>Abajour Tahina</figcaption>
 			</figure>
@@ -83,7 +84,7 @@
 			<figure>
 				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
 				<figcaption>Hotel First Arte - New Delhi</figcaption>
-			</figure>
+			</figure> -->
 		</div>
 	</section>
 	<section id="contact">
