creation modale + delete

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -28,11 +28,12 @@
             <h2 id="login-title">Log In</h2>
             <form action="#" method="post" id="login-form">
                 <label for="email">E-mail</label>
-                <input type="email">
+                <input type="email" id="email">
                 <label for="password">Mot de passe</label>
-                <input type="password">
+                <input type="password" id="password">
                 <input type="submit" value="Se connecter" id="connect">            
             </form>
+            <p></p>
             <p><a href="#">Mot de passe oublié</a></p>
         </section>
 
