--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -12,7 +12,7 @@
 	<script src="login.js" defer></script>
 </head>
 <body>
-    <header>
+    <header id="login-header">
         <a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
         <nav>
             <ul>
