--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -25,7 +25,8 @@
     </header>
     <main>
         <section id="login">
-            <h2 id="login-title">Log In</h2>
+            <h2>Log In</h2>
+            <p id="error-login"></p>
             <form action="#" method="post" id="login-form">
                 <label for="email">E-mail</label>
                 <input type="email" id="email">
@@ -33,7 +34,6 @@
                 <input type="password" id="password">
                 <input type="submit" value="Se connecter" id="connect">            
             </form>
-            <p></p>
             <p><a href="#">Mot de passe oublié</a></p>
         </section>
 
